Java 21 migrations