@@ -41,8 +41,8 @@ public class ChghostTest {
         Mockito.when(actorMock.getClient()).thenReturn(clientMock);
         sut.chghost(new ClientReceiveCommandEvent(clientMock, Mockito.mock(ServerMessage.class), actorMock, "CHGHOST", Arrays.asList("foo", "bar")));
         Assertions.assertEquals(1, exceptions.size(), "No exception fired");
-        Assertions.assertEquals(KittehServerMessageException.class, exceptions.get(0).getClass(), "Wrong exception type");
-        MatcherAssert.assertThat("Wrong exception fired", exceptions.get(0).getMessage(), CoreMatchers.containsString("Invalid actor for CHGHOST message"));
+        Assertions.assertEquals(KittehServerMessageException.class, exceptions.getFirst().getClass(), "Wrong exception type");
+        MatcherAssert.assertThat("Wrong exception fired", exceptions.getFirst().getMessage(), CoreMatchers.containsString("Invalid actor for CHGHOST message"));
     }
 
     /**
@@ -57,8 +57,8 @@ public class ChghostTest {
         Mockito.when(actorMock.getClient()).thenReturn(clientMock);
         sut.chghost(new ClientReceiveCommandEvent(clientMock, Mockito.mock(ServerMessage.class), actorMock, "CHGHOST", Arrays.asList("foo", "bar", "kitten")));
         Assertions.assertEquals(1, exceptions.size(), "No exception fired");
-        Assertions.assertEquals(KittehServerMessageException.class, exceptions.get(0).getClass(), "Wrong exception type");
-        MatcherAssert.assertThat("Wrong exception fired", exceptions.get(0).getMessage(), CoreMatchers.containsString("Invalid number of parameters for CHGHOST message"));
+        Assertions.assertEquals(KittehServerMessageException.class, exceptions.getFirst().getClass(), "Wrong exception type");
+        MatcherAssert.assertThat("Wrong exception fired", exceptions.getFirst().getMessage(), CoreMatchers.containsString("Invalid number of parameters for CHGHOST message"));
     }
 
     /**
@@ -73,8 +73,8 @@ public class ChghostTest {
         Mockito.when(actorMock.getClient()).thenReturn(clientMock);
         sut.chghost(new ClientReceiveCommandEvent(clientMock, Mockito.mock(ServerMessage.class), actorMock, "CHGHOST", Collections.singletonList("foo")));
         Assertions.assertEquals(1, exceptions.size(), "No exception fired");
-        Assertions.assertEquals(KittehServerMessageException.class, exceptions.get(0).getClass(), "Wrong exception type");
-        MatcherAssert.assertThat("Wrong exception fired", exceptions.get(0).getMessage(), CoreMatchers.containsString("Invalid number of parameters for CHGHOST message"));
+        Assertions.assertEquals(KittehServerMessageException.class, exceptions.getFirst().getClass(), "Wrong exception type");
+        MatcherAssert.assertThat("Wrong exception fired", exceptions.getFirst().getMessage(), CoreMatchers.containsString("Invalid number of parameters for CHGHOST message"));
     }
 
     /**
